feat: Add start script to package.json for easier application launch

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "scripts": {
     "dev": "nodemon ./server/",
+    "start": "node ./server/index.js",
     "test":"jest"
   },
   "devDependencies": {
